--- a/work.html
+++ b/work.html
@@ -64,7 +64,43 @@
 										<li><a href="" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article> -->
-
+								<!-- Tiffany Black -->
+								<article>
+									<header>
+										<span class="date">November 7, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/tiffany-black-i-grew-up-knowing-i-was-attracted-to-bright-colors-bXpN-mZpLkS43jUskKoyGg/">Tiffany Black: ‘I grew up knowing I was attracted to bright colors’</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/tiffany-black-i-grew-up-knowing-i-was-attracted-to-bright-colors-bXpN-mZpLkS43jUskKoyGg/" class="image fit"><img src="images/work_images/ict_tblack.jpg" alt="" /></a>
+									<p>Tiffany Black, Diné, is a makeup artist and beauty influencer. She has received recognition from major brands including Anastasia Beverly Hills, Morphe and Kylie Skin. </p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/tiffany-black-i-grew-up-knowing-i-was-attracted-to-bright-colors-bXpN-mZpLkS43jUskKoyGg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<!-- UA President DNA -->
+								<article>
+									<header>
+										<span class="date">November 5, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/we-didn-t-know-what-to-think-after-university-president-says-his-high-cheekbones-merit-dna-test-PzLJro4fIUq4UwlRGetVMg/">‘We didn’t know what to think’ after university president says his ‘high cheekbones’ merit DNA test</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/we-didn-t-know-what-to-think-after-university-president-says-his-high-cheekbones-merit-dna-test-PzLJro4fIUq4UwlRGetVMg/" class="image fit"><img src="images/work_images/ict_ua_pres.jpg" alt="" /></a>
+									<p>Seventeen students were gathered on an October afternoon at the Old Main building of the University of Arizona. They were writing letters and participating in a photoshoot for their Native SOAR class.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/we-didn-t-know-what-to-think-after-university-president-says-his-high-cheekbones-merit-dna-test-PzLJro4fIUq4UwlRGetVMg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<!-- Video economy -->
+								<article>
+									<header>
+										<span class="date">November 4, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/video-native-women-as-community-leaders-ceos-and-drivers-of-indigenous-economies-TS6vwcMrq0S8Z2SCDoPlUw/">VIDEO: Native women as community leaders, CEOs and drivers of Indigenous economies</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/video-native-women-as-community-leaders-ceos-and-drivers-of-indigenous-economies-TS6vwcMrq0S8Z2SCDoPlUw/" class="image fit"><img src="images/work_images/ict_video_economy.jpg" alt="" /></a>
+									<p>Reyna Banteah leases a plot of land from the city of Albuquerque where she grows kale, carrots, radishes and onions.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/video-native-women-as-community-leaders-ceos-and-drivers-of-indigenous-economies-TS6vwcMrq0S8Z2SCDoPlUw/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<!-- Teach of the year -->
 								<article>
 									<header>
 										<span class="date">October 25, 2019</span>
@@ -102,45 +138,6 @@
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/behind-the-scenes-making-cuddlefish-ArEjtJhn50e9MXhS8o-vsw/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								
-								<!-- ICT, American Academy -->
-								<article>
-									<header>
-										<span class="date">October 14, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/">‘Indigenizing research institutions’: Two journalists honored by The American Academy</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/" class="image fit"><img src="images/work_images/ict_academy.jpeg" alt="" /></a>
-									<p>The American Academy of Arts and Sciences is the oldest honor society in the nation. </p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								
-								<!-- ICT, IDP -->
-								<article>
-									<header>
-										<span class="date">October 11, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/map-making-indigenous-peoples-day-official-across-the-country-NRjFLa8jfESLKAl831N8aA/">Map: Making Indigenous Peoples Day official across the country</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/map-making-indigenous-peoples-day-official-across-the-country-NRjFLa8jfESLKAl831N8aA/" class="image fit"><img src="images/work_images/ict_idp_map.jpg" alt="" /></a>
-									<p>In 2011, the National Congress of American Indians passed a formal resolution advocating for the second Monday of October to be renamed Indigenous Peoples Day.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/map-making-indigenous-peoples-day-official-across-the-country-NRjFLa8jfESLKAl831N8aA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Piestewa Peak -->
-								<article>
-									<header>
-										<span class="date">October 6, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/video-dramatic-improvements-to-piestewa-peak-trail-SuwjFXYlMkaA0L0MGNo4yw/">Video: ‘Dramatic improvements’ to Piestewa Peak trail</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/video-dramatic-improvements-to-piestewa-peak-trail-SuwjFXYlMkaA0L0MGNo4yw/" class="image fit"><img src="images/work_images/ict_piestewa_peak.jpg" alt="" /></a>
-									<p>The City of Phoenix made “dramatic improvements” to the trailhead of Piestewa Peak, the city’s busiest hiking mountain. It reopened on Friday after a ribbon cutting ceremony.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/video-dramatic-improvements-to-piestewa-peak-trail-SuwjFXYlMkaA0L0MGNo4yw/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
 							</section>
 
 							<!-- Footer -->
@@ -155,6 +152,7 @@
 									<a href="work4.html" class="page">4</a>
 									<a href="work5.html" class="page">5</a>
 									<a href="work6.html" class="page">6</a>
+									<a href="work7.html" class="page">7</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work2.html" class="next">Next</a>
 								</div>
