--- a/work3.html
+++ b/work3.html
@@ -53,6 +53,45 @@
 
 						<!-- Posts -->
 							<section class="posts">
+
+								<!-- Iowa Native Press Campaign -->
+								<article>
+									<header>
+										<span class="date">September 24, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/">First an Iowa forum ... and now the Native press is a campaign stop</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" class="image fit"><img src="images/work_images/ict_iowa_native_press.jpg" alt="" /></a>
+									<p>Tomorrow Montana Governor Steve Bullock will sit down for a one-on-one interview at the Indian Country Today headquarters located at The Walter Cronkite School of Journalism and Mass Communication at Arizona State University.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- Lawsuit Filed -->
+								<article>
+									<header>
+										<span class="date">September 14, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/">Lawsuit filed against news organizations</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" class="image fit"><img src="images/work_images/ict_lawsuit.jpg" alt="" /></a>
+									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Castro Gracias -->
+								<article>
+									<header>
+										<span class="date">September 6, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank">The university experience wasn’t ‘made for Native students like me’</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="image fit"><img src="images/work_images/ict_native_uni.jpg" alt="" /></a>
+									<p>Lane Yazzie, Diné, is a fifth-year student at San Diego State University concentrating on interdisciplinary studies. Yazzie found the transition from high school to college as difficult.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<!-- ICT, Booker, Climate Resistance -->
 								<article>
 									<header>
@@ -90,45 +129,6 @@
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-
-								<!-- ICT, Sestak -->
-								<article>
-									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank">Joe Sestak kicks off day two of the Presidential Forum</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="image fit"><img src="images/work_images/ict_sestak.jpg" alt="" /></a>
-									<p>Former congressman Joe Sestak from Pennsylvania started off the second day of the Frank LaMere Presidential Forum. </p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Julián Castro -->
-								<article>
-									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank">Julián Castro receives Native endorsements— he is an ‘unwavering leader’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro.jpg" alt="" /></a>
-									<p>Hours before the Julián Castro takes the stage at the Frank LaMere Presidential Forum, Indian Country Today learned his campaign has four new endorsements from Native leaders.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Steve Bullock -->
-								<article>
-									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank">Steve Bullock cites previous experience working with Indian Country</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="image fit"><img src="images/work_images/ict_bullock.jpg" alt="" /></a>
-									<p>Montana Governor Steve Bullock was the fourth and final candidate to speak on Monday at the Frank LaMere Presidential Forum in Sioux City, Iowa.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
 							</section>
 
 							<!-- Footer -->
@@ -143,6 +143,7 @@
 									<a href="work4.html" class="page">4</a>
 									<a href="work5.html" class="page">5</a>
 									<a href="work6.html" class="page">6</a>
+									<a href="work7.html" class="page">7</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work4.html" class="next">Next</a>
 								</div>
