--- a/work4.html
+++ b/work4.html
@@ -53,6 +53,44 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- ICT, Sestak -->
+								<article>
+									<header>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank">Joe Sestak kicks off day two of the Presidential Forum</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="image fit"><img src="images/work_images/ict_sestak.jpg" alt="" /></a>
+									<p>Former congressman Joe Sestak from Pennsylvania started off the second day of the Frank LaMere Presidential Forum. </p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Julián Castro -->
+								<article>
+									<header>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank">Julián Castro receives Native endorsements— he is an ‘unwavering leader’</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro.jpg" alt="" /></a>
+									<p>Hours before the Julián Castro takes the stage at the Frank LaMere Presidential Forum, Indian Country Today learned his campaign has four new endorsements from Native leaders.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Steve Bullock -->
+								<article>
+									<header>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank">Steve Bullock cites previous experience working with Indian Country</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="image fit"><img src="images/work_images/ict_bullock.jpg" alt="" /></a>
+									<p>Montana Governor Steve Bullock was the fourth and final candidate to speak on Monday at the Frank LaMere Presidential Forum in Sioux City, Iowa.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<!-- ICT, Marianne Williamson -->
 								<article>
 									<header>
@@ -90,46 +128,7 @@
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-
-								<!-- ICT, Gabbard -->
-								<article>
-									<header>
-										<span class="date">August 2, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank">Tulsi Gabbard says Americans need to address ‘broken treaties and broken promises’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="image fit"><img src="images/work_images/ict_gabbard_nd.jpeg" alt="" /></a>
-									<p>Rep. Tulsi Gabbard, D-Hawaii, traveled to North Dakota before taking the stage in Detroit for the Second Democratic debate. It was the 38-year-old’s second visit.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<!-- ICT, Aaron Yazzie -->
-								<article>
-									<header>
-										<span class="date">July 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank">NASA's next generation of Natives: After the moon it's the 2020 Mission to Mars</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank" class="image fit"><img src="images/work_images/ict_ayazzie.jpg" alt="" /></a>
-									<p>Aaron Yazzie sometimes felt like he was in a “little bubble" growing up on the Navajo Nation reservation in Holbrook, Arizona.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- Daily, Kanaka Maoli -->
-								<article>
-									<header>
-										<span class="date">July 19, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank">Kanaka Maoli: ‘Do not mistake our aloha for weakness’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank" class="image fit"><img src="images/work_images/ict_mauna.jpg" alt="" /></a>
-									<p>Kanaka Maoli, Native Hawaiians, are peacefully protesting the construction of a Thirty Meter Telescope on their sacred site, Mauna Kea.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
 							</section>
-
 							<!-- Footer -->
 							<footer>
 								<div class="pagination">
@@ -141,6 +140,7 @@
 									<a href="#" class="page active">4</a>
 									<a href="work5.html" class="page">5</a>
 									<a href="work6.html" class="page">6</a>
+									<a href="work7.html" class="page">7</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work5.html" class="next">Next</a>
 								</div>
