--- a/work2.html
+++ b/work2.html
@@ -53,6 +53,45 @@
 
 						<!-- Posts -->
 							<section class="posts">
+
+								<!-- ICT, American Academy -->
+								<article>
+									<header>
+										<span class="date">October 14, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/">‘Indigenizing research institutions’: Two journalists honored by The American Academy</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/" class="image fit"><img src="images/work_images/ict_academy.jpeg" alt="" /></a>
+									<p>The American Academy of Arts and Sciences is the oldest honor society in the nation. </p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								
+								<!-- ICT, IDP -->
+								<article>
+									<header>
+										<span class="date">October 11, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/map-making-indigenous-peoples-day-official-across-the-country-NRjFLa8jfESLKAl831N8aA/">Map: Making Indigenous Peoples Day official across the country</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/map-making-indigenous-peoples-day-official-across-the-country-NRjFLa8jfESLKAl831N8aA/" class="image fit"><img src="images/work_images/ict_idp_map.jpg" alt="" /></a>
+									<p>In 2011, the National Congress of American Indians passed a formal resolution advocating for the second Monday of October to be renamed Indigenous Peoples Day.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/map-making-indigenous-peoples-day-official-across-the-country-NRjFLa8jfESLKAl831N8aA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Piestewa Peak -->
+								<article>
+									<header>
+										<span class="date">October 6, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/video-dramatic-improvements-to-piestewa-peak-trail-SuwjFXYlMkaA0L0MGNo4yw/">Video: ‘Dramatic improvements’ to Piestewa Peak trail</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/video-dramatic-improvements-to-piestewa-peak-trail-SuwjFXYlMkaA0L0MGNo4yw/" class="image fit"><img src="images/work_images/ict_piestewa_peak.jpg" alt="" /></a>
+									<p>The City of Phoenix made “dramatic improvements” to the trailhead of Piestewa Peak, the city’s busiest hiking mountain. It reopened on Friday after a ribbon cutting ceremony.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/video-dramatic-improvements-to-piestewa-peak-trail-SuwjFXYlMkaA0L0MGNo4yw/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<!-- ICT, Lost Hopi -->
 								<article>
 									<header>
@@ -91,45 +130,6 @@
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/behind-the-scenes-grandma-sheep-is-running-away-6JeLn2o8cE-RmzKuclfvAw/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								
-								<!-- Iowa Native Press Campaign -->
-								<article>
-									<header>
-										<span class="date">September 24, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/">First an Iowa forum ... and now the Native press is a campaign stop</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" class="image fit"><img src="images/work_images/ict_iowa_native_press.jpg" alt="" /></a>
-									<p>Tomorrow Montana Governor Steve Bullock will sit down for a one-on-one interview at the Indian Country Today headquarters located at The Walter Cronkite School of Journalism and Mass Communication at Arizona State University.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- Lawsuit Filed -->
-								<article>
-									<header>
-										<span class="date">September 14, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/">Lawsuit filed against news organizations</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" class="image fit"><img src="images/work_images/ict_lawsuit.jpg" alt="" /></a>
-									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Castro Gracias -->
-								<article>
-									<header>
-										<span class="date">September 6, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank">The university experience wasn’t ‘made for Native students like me’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="image fit"><img src="images/work_images/ict_native_uni.jpg" alt="" /></a>
-									<p>Lane Yazzie, Diné, is a fifth-year student at San Diego State University concentrating on interdisciplinary studies. Yazzie found the transition from high school to college as difficult.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
 							</section>
 
 							<!-- Footer -->
@@ -144,6 +144,7 @@
 									<a href="work4.html" class="page">4</a>
 									<a href="work5.html" class="page">5</a>
 									<a href="work6.html" class="page">6</a>
+									<a href="work7.html" class="page">7</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work3.html" class="next">Next</a>
 								</div>
