--- a/work4.html
+++ b/work4.html
@@ -53,82 +53,84 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								<!-- ICT, Sestak -->
+
+								<!-- Iowa Native Press Campaign -->
 								<article>
 									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank">Joe Sestak kicks off day two of the Presidential Forum</a></h3>
+										<span class="date">September 24, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/">First an Iowa forum ... and now the Native press is a campaign stop</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="image fit"><img src="images/work_images/ict_sestak.jpg" alt="" /></a>
-									<p>Former congressman Joe Sestak from Pennsylvania started off the second day of the Frank LaMere Presidential Forum. </p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" class="image fit"><img src="images/work_images/ict_iowa_native_press.jpg" alt="" /></a>
+									<p>Tomorrow Montana Governor Steve Bullock will sit down for a one-on-one interview at the Indian Country Today headquarters located at The Walter Cronkite School of Journalism and Mass Communication at Arizona State University.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- ICT, Julián Castro -->
+								<!-- Lawsuit Filed -->
 								<article>
 									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank">Julián Castro receives Native endorsements— he is an ‘unwavering leader’</a></h3>
+										<span class="date">September 14, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/">Lawsuit filed against news organizations</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro.jpg" alt="" /></a>
-									<p>Hours before the Julián Castro takes the stage at the Frank LaMere Presidential Forum, Indian Country Today learned his campaign has four new endorsements from Native leaders.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" class="image fit"><img src="images/work_images/ict_lawsuit.jpg" alt="" /></a>
+									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- ICT, Steve Bullock -->
+								<!-- ICT, Castro Gracias -->
 								<article>
 									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank">Steve Bullock cites previous experience working with Indian Country</a></h3>
+										<span class="date">September 6, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank">The university experience wasn’t ‘made for Native students like me’</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="image fit"><img src="images/work_images/ict_bullock.jpg" alt="" /></a>
-									<p>Montana Governor Steve Bullock was the fourth and final candidate to speak on Monday at the Frank LaMere Presidential Forum in Sioux City, Iowa.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="image fit"><img src="images/work_images/ict_native_uni.jpg" alt="" /></a>
+									<p>Lane Yazzie, Diné, is a fifth-year student at San Diego State University concentrating on interdisciplinary studies. Yazzie found the transition from high school to college as difficult.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<!-- ICT, Marianne Williamson -->
+								<!-- ICT, Booker, Climate Resistance -->
 								<article>
 									<header>
-										<span class="date">August 19, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank">Marianne Williamson: ‘I will apologize’</a></h3>
+										<span class="date">September 6, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank">Senator calls Indigenous communities ‘the center’ of a climate resilience</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="image fit"><img src="images/work_images/ict_marianne.jpg" alt="" /></a>
-									<p>Author Marianne Williamson took the stage, escorted by a tribal elder and youth, as she was introduced by Ruth Buffalo, the first Native woman in the North Dakota State Legislature.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="image fit"><img src="images/work_images/ict_climate_resistance.jpg" alt="" /></a>
+									<p>Presidential candidate Cory Booker says Indian Country is a critical part of his $3 trillion climate and economic justice plan.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<!-- ICT, LaDonna Harris -->
+								<!-- ICT, Race Across the Sky -->
 								<article>
 									<header>
-										<span class="date">August 18, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank">LaDonna Harris ‘stumbled’ into a legacy of impact</a></h3>
+										<span class="date">August 26, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank">Completing a 100-mile race with the help of Chinese food and community</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank" class="image fit"><img src="images/work_images/ict_ladonna.jpg" alt="" /></a>
-									<p>LaDonna Harris remembers what Washington, D.C., was like in the 1960s. Tribal leaders had to travel back and forth across town, meeting in different offices, in order to get business done with the federal government.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank" class="image fit"><img src="images/work_images/ict_chinese_food.jpg" alt="" /></a>
+									<p>Racers endure 100 miles of Rocky Mountain terrain while climbing 15,600 feet to the finish line by foot or bike. The “Race Across the Sky,” also known as the Leadville Race Series, challenges thousands of athletes every year.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
-								<!-- ICT, Iowa Powwow -->
+								<!-- ICT, Castro Gracias -->
 								<article>
 									<header>
-										<span class="date">August 12, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank">Iowa's powwow trail had a campaign stop</a></h3>
+										<span class="date">August 21, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank">Julián Castro has specific plans for Indian Country & a ‘gracias’ for warm welcome</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank" class="image fit"><img src="images/work_images/ict_iowa.jpg" alt="" /></a>
-									<p>Three presidential candidates reached out to powwow goers Saturday and talked about tribal sovereignty, reparations and removing Andrew Jackson from the White House's Oval Office.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro_language.jpg" alt="" /></a>
+									<p>A recurring theme of the Frank LaMere Native American Presidential Forum was language. Indian Country listened as panelists spoke various languages before they asked questions to White House hopefuls.</p>
 									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
+
 							<!-- Footer -->
 							<footer>
 								<div class="pagination">
@@ -141,6 +143,7 @@
 									<a href="work5.html" class="page">5</a>
 									<a href="work6.html" class="page">6</a>
 									<a href="work7.html" class="page">7</a>
+									<a href="work8.html" class="page">8</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work5.html" class="next">Next</a>
 								</div>
