--- a/work2.html
+++ b/work2.html
@@ -143,7 +143,7 @@
 							<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="work.html" class="previous">Prev</a>
 									<a href="work.html" class="page">1</a>
 									<a href="#" class="page active">2</a>
 									
