--- a/work.html
+++ b/work.html
@@ -135,7 +135,7 @@
 										<span class="date">November 13, 2019</span>
 										<h3><a href="https://newsmaven.io/indiancountrytoday/news/she-makes-history-LnWicC3NNU2Uk3-Zg-x6uA/">She Makes History</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/she-makes-history-LnWicC3NNU2Uk3-Zg-x6uA/" class="image fit"><img src="images/work_images/ict_teller.jpg" alt="" /></a>
+									<a href="https://newsmaven.io/indiancountrytoday/news/she-makes-history-LnWicC3NNU2Uk3-Zg-x6uA/" class="image fit"><img src="images/work_images/ict_teller.jpeg" alt="" /></a>
 									<p>Verna Teller is chief justice of Isleta Pueblo … and she made history this morning. She was the first Native person to deliver an opening prayer on the floor of the U.S. House of Representatives..</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/she-makes-history-LnWicC3NNU2Uk3-Zg-x6uA/" target="_blank" class="button">Full Story</a></li>
@@ -156,6 +156,7 @@
 									<a href="work5.html" class="page">5</a>
 									<a href="work6.html" class="page">6</a>
 									<a href="work7.html" class="page">7</a>
+									<a href="work8.html" class="page">8</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work2.html" class="next">Next</a>
 								</div>
