--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 								
 								<p>I am a proud member of Kewa Pueblo, one of the 21 Indigenous nations in New Mexico. Much of my inspiration stems from growing up in the Pueblo, a place where Native people are largely underrepresented in all forms of media.</br></br>
 
-								Currently, I am a reporter and producer at Indian Country Today in Phoenix, Arizona. We are a digital news platform that covers news happening in Indigenous communities around the country. In the fall, we will be launching a television news show where I will continue my reporting. Previously, I have worked in national newsrooms including the Peninsula Press, the West Valley View, and NBC’s Today show.<br/><br/>
+								Currently, I am a reporter and producer at Indian Country Today in Albuquerque, New Mexico. We are a digital news platform that covers news happening in Indigenous communities around the country. Aside from my work at ICT, I co-host "Break It Down" on Arizona PBS. Previously, I have worked in national newsrooms including the Peninsula Press, the West Valley View, and NBC’s Today show.<br/><br/>
 
 								I graduated from Stanford University in 2019 with an M.A. in Journalism and a B.A. in Communication and the Comparative Studies in Race and Ethnicity. At Stanford, I was an active member of the Native American community, holding leadership positions with the powwow and Stanford American Indian Organization. I was also a member of the Stanford varsity cheerleading team where I cheered at various bowl games and NCAA postseason tournaments. I am a member of the Native American Journalists Association.<br/><br/>
 
-								In my free time, I enjoy all things fitness and spending time with my family and loved ones.</p>
+								In my free time, I enjoy all things fitness, eating breakfast burritos and spending time with her many cousins and relatives.</p>
 								<!-- <a href="#" class="image main"><img src="images/cover_6.png" alt="" /></a> -->
 							</article>
 
@@ -108,7 +108,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>Phoenix, AZ</p>
+								<p>Albuquerque, NM</p>
 							</section>
 							<section>
 								<h3>Social</h3>
