--- a/work.html
+++ b/work.html
@@ -56,18 +56,18 @@
 						<!-- Posts -->
 							<section class="posts">
 								<!-- ICT,  -->
-								<!-- <article>
+								<article>
 									<header>
-										<span class="date">May , 2021</span>
-										<h3><a href=""></a></h3>
+										<span class="date">May 12, 2021</span>
+										<h3><a href="https://indiancountrytoday.com/news/100-days-on-capitol-hill">100 days on Capitol Hill</a></h3>
 									</header>
-									<a href="" class="image fit"><img src="images/work_images/ict_.jpg" alt="" /></a>
-									<p></p>
+									<a href="https://indiancountrytoday.com/news/100-days-on-capitol-hill" class="image fit"><img src="images/work_images/2021/100days.jpeg" alt="" /></a>
+									<p>It’s been a little more than 100 days since the five Indigenous members were sworn into the 117th Congress. A lot has happened since then.</p>
 									<ul class="actions special">
-										<li><a href="" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://indiancountrytoday.com/news/100-days-on-capitol-hill" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
- -->								<!-- ICT,  -->
+								<!-- ICT,  -->
 								<article>
 									<header>
 										<span class="date">April 28, 2021</span>
